it/dev/logstash-opensearch/dashboard/svc.yaml
---
# Source: opensearch-dashboards/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opensearch-dashboard-opensearch-dashboards
  namespace: opensearch
  labels:
    helm.sh/chart: opensearch-dashboards-2.1.0
    app.kubernetes.io/name: opensearch-dashboards
    app.kubernetes.io/instance: opensearch-dashboard
    app.kubernetes.io/version: "2.0.1"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
  - port: 5601
    protocol: TCP
    name: http
    targetPort: 5601
  selector:
    app: opensearch-dashboards
    release: "opensearch-dashboard"
