it/dev/logstash-opensearch/dashboard/ingress.yaml
---
# Source: opensearch-dashboards/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opensearch-dashboard-opensearch-dashboards
  namespace: opensearch
  labels:
    helm.sh/chart: opensearch-dashboards-2.1.0
    app.kubernetes.io/name: opensearch-dashboards
    app.kubernetes.io/instance: opensearch-dashboard
    app.kubernetes.io/version: "2.0.1"
    app.kubernetes.io/managed-by: Helm
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  tls:
    - hosts:
        - "it-opensearch.dev.lsst.org"
      secretName: it-opensearch-tls
  rules:
    - host: "it-opensearch.dev.lsst.org"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: opensearch-dashboard-opensearch-dashboards
                port:
                  number: 5601
