it/dev/logstash-opensearch/dashboard/template.yaml
---
# Source: opensearch-dashboards/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opensearch-dashboard-opensearch-dashboards
  labels:
    helm.sh/chart: opensearch-dashboards-2.1.0
    app.kubernetes.io/name: opensearch-dashboards
    app.kubernetes.io/instance: opensearch-dashboard
    app.kubernetes.io/version: "2.0.1"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
  - port: 5601
    protocol: TCP
    name: http
    targetPort: 5601
  selector:
    app: opensearch-dashboards
    release: "opensearch-dashboard"
---
# Source: opensearch-dashboards/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opensearch-dashboard-opensearch-dashboards
  labels:
    helm.sh/chart: opensearch-dashboards-2.1.0
    app.kubernetes.io/name: opensearch-dashboards
    app.kubernetes.io/instance: opensearch-dashboard
    app.kubernetes.io/version: "2.0.1"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: opensearch-dashboards
      release: "opensearch-dashboard"
  template:
    metadata:
      labels:
        app: opensearch-dashboards
        release: "opensearch-dashboard"
      annotations:
    spec:
      securityContext:
        {}
      serviceAccountName: opensearch-dashboard-opensearch-dashboards-dashboards
      volumes:
      containers:
      - name: dashboards
        securityContext:
          capabilities:
            drop:
            - ALL
          runAsNonRoot: true
          runAsUser: 1000
        image: "opensearchproject/opensearch-dashboards:2.0.1"
        imagePullPolicy: "IfNotPresent"
        ports:
        - containerPort: 5601
          name: http
          protocol: TCP
        resources:
          limits:
            cpu: 100m
            memory: 512M
          requests:
            cpu: 100m
            memory: 512M
        volumeMounts:
---
# Source: opensearch-dashboards/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opensearch-dashboard-opensearch-dashboards
  labels:
    helm.sh/chart: opensearch-dashboards-2.1.0
    app.kubernetes.io/name: opensearch-dashboards
    app.kubernetes.io/instance: opensearch-dashboard
    app.kubernetes.io/version: "2.0.1"
    app.kubernetes.io/managed-by: Helm
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  tls:
    - hosts:
        - "it-opensearch.dev.lsst.org"
      secretName: it-opensearch-tls
  rules:
    - host: "it-opensearch.dev.lsst.org"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: opensearch-dashboard-opensearch-dashboards
                port:
                  number: 5601
